--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: github
   branch: main # change this to your branch
   repo: cuichan/MyBlog # 1、change this to your repo
-  site_domain: my-blog-phi-lyart.vercel.app # 2、change this to your domain
-  base_url: https://my-blog-phi-lyart.vercel.app # 3、change this to your prod URL
+  site_domain: blog.wrihope.top # 2、change this to your domain
+  base_url: https://blog.wrihope.top # 3、change this to your prod URL
   auth_endpoint: oauth # the oauth route provided by the integration
 
 collections:
